# fyxrun3DRemake

./: Makefile  README.md
engine/: CMakeLists.txt  Makefile  build.ps1  clean.ps1
engine/src/: defext.c  defext.h
engine/src/camera/: camera.cpp  camera.hpp
engine/src/glext/: gl_texture.c  gl_texture.h  glext.c  glext.h  native_gl.cpp  native_gl.hpp
engine/src/linux/: glfw.cpp  glfw.hpp
engine/src/models/: obj.cpp  obj.hpp
engine/src/models/legacy/: obj_loader.c  obj_loader.h  vecext.c  vecext.h
engine/src/physics/: collider.cpp  collider.hpp
engine/src/shaders/: ogl_shader.cpp  ogl_shader.hpp
engine/src/transform/: matrix.hpp  operations.cpp  operations.hpp  transform.cpp  transform.hpp  trygonometry.cpp
game/: Makefile  resource.rc
game/src/: controls.cpp  controls.hpp  main.cpp  manager.cpp  manager.hpp  player.cpp
game/src/ext/: glext.c  glext.h
